# MLOPS-PoC

./: 7.4.4  Architecture.pptx  dvc.yaml  params.yaml  pyproject.toml
datadir/output/: GOLD.csv  SNP.csv  SNP_predictors_df.parquet  SNP_target_df.parquet  predictors_df.parquet  target_df.parquet
feature_repo/: feature_defination.py
feature_repo/data/: driver_stats.parquet  online_store.db  registry.db  stock_dataset.parquet
notebooks/: papermill.ipynb  stock_up_down_base.ipynb  stock_up_down_parametrize.ipynb  utils.py
notebooks/feature_repo/feature_repo/: example_repo.py
notebooks/feature_repo/feature_repo/data/: driver_stats.parquet
