[tool.poetry]
name = "ospoc-mlops"
version = "0.1.0"
description = ""
authors = ["Karry Harsh <karryharsh@gmail.com>"]
readme = "README.md"
packages = [{include = "ospoc_mlops"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
ipykernel = "^6.19.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
